--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@prisma/client": "^5.13.0",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
