--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animated": "^1.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
