--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-toastify": "^10.0.5",
     "zod": "^3.23.4",
     "zustand": "^4.5.2"
   },
