--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "next": "14.2.2",
+    "next-cloudinary": "^6.5.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
