--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-toastify": "^10.0.5",
+    "swr": "^2.2.5",
     "zod": "^3.23.4",
     "zustand": "^4.5.2"
   },
